new model: adding hero.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,34 @@
 .app {
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+}
 
-  background-color: var(--color-primary);
-  font-family: var(--font-family-main);
-  line-height: 1.6;
+.app.darkMode {
+  background-color: rgb(244, 247, 252);
+  animation: toDarkMode 0.05s steps(5) forwards;
+}
+
+.app.lightMode {
+  background-color: #021430;
+  animation: toLightMode 0.05s steps(5) forwards;
+}
+
+@keyframes toLightMode {
+  0% {
+    background: #021430;
+  }
+
+  100% {
+    background: rgb(244, 247, 252);
+  }
+}
+
+@keyframes toDarkMode {
+  0% {
+    background: rgb(244, 247, 252);
+  }
+
+  100% {
+    background: #021430;
+  }
 }
