--- a/src/index.css
+++ b/src/index.css
@@ -1,49 +1,6 @@
-/*-------------------*-------------------*-------------------*------------------- Fonts -------------------*-------------------*-------------------*-------------------*/
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700;800&family=Lato:wght@300;400;700;900&family=Raleway:wght@200;300;400;500;600;700;800&family=Roboto:wght@300;400;500;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700&display=swap');
 
-*,
-*::before,
-*::after {
-  margin: 0;
+body {
   padding: 0;
-  box-sizing: border-box;
-}
-
-:root {
-  /*-------------------*------------------- Font Size */
-  font-size: 15px;
-
-  /*-------------------*------------------- Colors */
-  --color-primary: #ffffff;
-  --color-secondary: #2be6ee;
-
-  --font-family-main: "Lato", sans-serif;
-  --font-family-sub: "Roboto", sans-serif;
-  --font-family-sub2: "Josefin Sans", sans-serif;
-  --font-family-btns: "Raleway", sans-serif;
-
-  --font-size-s-s: 0.8em;
-
-  --padding-h-container-l: 10vw;
-  --padding-h-container-m: 3vw;
-}
-
-a {
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-@media (max-width: 1150px) {
-  :root {
-    font-size: 14px;
-  }
-}
-
-@media (max-width: 800px) {
-  :root {
-    font-size: 12px;
-  }
+  margin: 0;
 }
