--- a/src/components/ScrollDown/style.module.css
+++ b/src/components/ScrollDown/style.module.css
@@ -6,7 +6,29 @@
   bottom: 0;
 
   right: 20px;
-  z-index: 1;
+  z-index: 2;
+}
+
+.scrollDownAppear {
+  position: fixed;
+  flex-direction: column;
+  bottom: 0;
+
+  right: 20px;
+  z-index: 2;
+  opacity: 0;
+  animation: appearScroll 0.2s forwards 3.6s;
+}
+
+@keyframes appearScroll {
+  0%{
+    opacity: 0;
+    bottom: -20px;
+  }
+  100%{
+    opacity: 100%;
+    bottom: 0;
+  }
 }
 
 .container {
