--- a/src/sections/Header/style.module.css
+++ b/src/sections/Header/style.module.css
@@ -1,12 +1,6 @@
-.header {
-    box-sizing: border-box;
-    position: absolute;
-    height: 80px;
+
+.header{
     width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0px 35px;
-    justify-content: space-between;
-    z-index: 1;
-  }
-  
+    min-height: 100vh;
+}
+
