new Update: adjusting hero responsivity

--- a/src/components/Hero/style.module.css
+++ b/src/components/Hero/style.module.css
@@ -327,7 +327,7 @@
   }
 }
 
-@media (max-height: 720px) {
+@media (max-width: 950px) and (max-height: 720px) {
   .layout {
     padding-top: 80px;
   }
