--- a/src/components/Hero/style.module.css
+++ b/src/components/Hero/style.module.css
@@ -327,6 +327,12 @@
   }
 }
 
+@media (max-height: 720px) {
+  .layout {
+    padding-top: 20px;
+  }
+}
+
 @media (max-width: 950px) and (max-height: 720px) {
   .layout {
     padding-top: 80px;
