--- a/src/components/Logos/GitLogo/style.module.css
+++ b/src/components/Logos/GitLogo/style.module.css
@@ -1,11 +1,11 @@
 .gitLogo {
     transition: 0.2s ease-out;
-    width: 60px;
+    width: 3.75em;
 }
 
 .gitLogo:hover {
     transition: 0.2s ease-out;
-    width: 80px;
+    width: 5em;
 }
 
 .pathOneLightMode {
