--- a/src/components/Logos/SpringLogo/style.module.css
+++ b/src/components/Logos/SpringLogo/style.module.css
@@ -1,13 +1,13 @@
 .springLogo {
   transition: 0.2s ease-out;
-  width: 50px;
-  height: 50px;
+  width: 3.125em;
+  height: 3.125em;
 }
 
 .springLogo:hover {
   transition: 0.2s ease-out;
-  width: 65px;
-  height: 65px;
+  width: 4.0625em;
+  height: 4.0625em;
 }
 
 .springLogoMouseEnter {
