--- a/src/components/NavLinks/style.module.css
+++ b/src/components/NavLinks/style.module.css
@@ -11,6 +11,10 @@
   gap: calc(1.5vw + 32px);
 }
 
+.current {
+  color: var(--color-blue-light);
+}
+
 .navLinks li {
   cursor: default;
 }
@@ -57,6 +61,7 @@
 
 .homeAnimated {
   opacity: 0;
+  color: var(--color-blue-light);
   animation: dropLink 0.2s ease-out  3.2s;
   animation-fill-mode: forwards;
 }
