--- a/src/components/ProjectCard/style.module.css
+++ b/src/components/ProjectCard/style.module.css
@@ -1,7 +1,6 @@
 .cardWrapper {
-  margin: 20px 0;
+  height: 320px;
   width: 57vw;
-  height: fit-content;
   position: relative;
 }
 
@@ -14,7 +13,8 @@
   /*background-color: rgba(33, 72, 95, 0.4);*/
 }
 
-.image{
+.image {
+  box-sizing: border-box;
   width: 28.75vw;
   height: 16vw;
   position: absolute;
@@ -34,7 +34,8 @@
 }
 
 .content {
-  box-sizing: border-box;
+  min-width: 440px;
+  width: 520px;
   padding: 20px 0;
   position: absolute;
   top: 0;
@@ -51,14 +52,15 @@
   justify-content: start;
 }
 
-.contentRight{
+.contentRight {
   right: 0;
   text-align: end;
-  justify-content: end;
+  justify-content: start;
 }
 
 .content p {
   padding: 20px;
+
   background-color: rgba(42, 69, 85, 0.95);
   color: rgb(151, 196, 188);
   border-radius: 5px;
@@ -67,12 +69,12 @@
 }
 
 .title {
+  width: fit-content;
   transition: 0.2s;
   margin-bottom: 1vw;
   font-size: 30px;
   font-family: var(--font-title);
   font-weight: 600;
-  
 }
 
 .titleLightMode {
@@ -100,7 +102,7 @@
   justify-content: end;
 }
 
-.techs ul{
+.techs ul {
   display: flex;
   gap: 15px;
 }
@@ -128,14 +130,14 @@
   justify-content: start;
 }
 
-.links ul{
+.links ul {
   display: flex;
   gap: 16px;
 }
 
-.links li{
-  width: 22px;
-  padding-left: 5px;
+.links li {
+  width: 32px;
+  padding-left: 10px;
   cursor: pointer;
 }
 
@@ -152,4 +154,133 @@
 .logoDarkMode {
   transition: 0.2s;
   stroke: white;
+}
+
+@media (max-width: 1200px) {
+  .cardWrapper {
+    height: 310px;
+    width: 553px;
+  }
+
+  .imageWrapper {
+    height: 310px;
+    width: 553px;
+  }
+
+  .image {
+    height: 310px;
+    width: 553px;
+  }
+
+  .content {
+    width: 100%;
+    background-color: rgba(42, 69, 85, 0.95);
+    border-radius: 4px;
+    padding: 10px;
+    gap: 30px;
+  }
+
+  .content p {
+    padding: 0;
+    bottom: 0;
+  }
+
+  .contentLeft {
+    left: 0;
+    text-align: start;
+    justify-content: end;
+  }
+
+  .contentRight {
+    left: 0;
+    text-align: start;
+    justify-content: end;
+  }
+
+  .techsLeft {
+    align-items: flex-start;
+    justify-content: start;
+  }
+
+  .techsRight {
+    align-items: flex-start;
+    justify-content: start;
+  }
+
+  .linksRight {
+    align-items: flex-start;
+    justify-content: start;
+  }
+
+  .linksLeft {
+    align-items: flex-start;
+    justify-content: start;
+  }
+}
+
+@media (max-width: 600px) {
+  .cardWrapper {
+    height: 250px;
+    width: 445.97px;
+  }
+
+  .imageWrapper {
+    height: 250px;
+    width: 445.97px;
+  }
+
+  .image {
+    height: 250px;
+    width: 445.97px;
+  }
+
+  .content {
+    width: 100%;
+    background-color: rgba(42, 69, 85, 0.95);
+    border-radius: 4px;
+    padding: 10px;
+    gap: 15px;
+  }
+}
+
+@media (max-width: 500px) {
+  .cardWrapper {
+    height: 350px;
+    width: 385.97px;
+  }
+
+  .imageWrapper {
+    height: 250px;
+    width: 385.97px;
+  }
+
+  .image {
+    height: 250px;
+    width: 385.97px;
+  }
+
+  .content p {
+    width: 385.97px;
+  }
+}
+
+@media (max-width: 420px) {
+  .cardWrapper {
+    height: 350px;
+    width: 285.97px;
+  }
+
+  .imageWrapper {
+    height: 250px;
+    width: 285.97px;
+  }
+
+  .image {
+    height: 250px;
+    width: 285.97px;
+  }
+
+  .content p {
+    width: 285.97px;
+  }
 }
