--- a/src/sections/Contact/style.module.css
+++ b/src/sections/Contact/style.module.css
@@ -1,16 +1,36 @@
 .contact {
-    min-height: 600px;
-    width: 100%;
+  min-height: 600px;
+  width: 100%;
+  overflow: hidden;
+
 }
 
-.wrapper{
-    margin-top: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.wrapper {
+  width: 100%;
+  padding: 0;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.mail{
-    max-height: 300px;
+.mail {
+  max-height: 300px;
 }
 
+@media (max-width: 950px) {
+    .mail {
+        max-height: 200px;
+    }
+}
+
+@media (max-width: 800px) {
+
+  .mail {
+    display: none;
+  }
+
+  .wrapper {
+    justify-content: start;
+  }
+}
