--- a/src/components/ProjectCard/style.module.css
+++ b/src/components/ProjectCard/style.module.css
@@ -1,149 +1,110 @@
-.cardWrapper {
-  height: 320px;
-  width: 57vw;
+.card {
+  margin: 0 auto;
+  width: 1000px;
   position: relative;
 }
 
+.positionRight {
+  position: absolute;
+  right: 0;
+}
+
+.positionLeft {
+  position: absolute;
+  left: 0;
+}
+
+.alignItemsRight {
+  align-items: flex-end;
+}
+
+.alignItemsLeft {
+  align-items: flex-start;
+}
+
+.justifyRight {
+  justify-content: flex-end;
+}
+
+.justifyLeft {
+  justify-content: flex-start;
+}
+
 .imageWrapper {
-  width: 100%;
-  height: 16vw;
-  /*background-size: 100%;
-  background-repeat: no-repeat;*/
-  border-radius: 4px;
-  /*background-color: rgba(33, 72, 95, 0.4);*/
+  height: inherit;
+  width: inherit;
+  border-radius: inherit;
+  display: flex;
 }
 
 .image {
-  box-sizing: border-box;
-  width: 28.75vw;
-  height: 16vw;
-  position: absolute;
-  /*background-size: 100%;
-  background-repeat: no-repeat;*/
   border-radius: 4px;
-  /*background-color: rgba(33, 72, 95, 0.4);*/
-  box-shadow: 0px 40px 20px -20px rgba(0, 0, 0, 0.25);
 }
 
-.imageRight {
-  right: 0;
-}
-
-.imageLeft {
-  left: 0;
+.title h2 {
+  font-family: var(--font-title-secondary);
+  letter-spacing: 2px;
 }
 
 .content {
-  min-width: 440px;
-  width: 520px;
-  padding: 20px 0;
-  position: absolute;
-  top: 0;
-  width: 52%;
+  width: 400px;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  gap: 15px;
-}
-
-.contentLeft {
-  left: 0;
-  text-align: start;
-  justify-content: start;
-}
-
-.contentRight {
-  right: 0;
-  text-align: end;
-  justify-content: start;
+  gap: 20px;
 }
 
 .content p {
-  padding: 20px;
-
-  background-color: rgba(42, 69, 85, 0.95);
   color: rgb(151, 196, 188);
-  border-radius: 5px;
-  line-height: 24px;
-  text-align: left;
+  font-family: var(--font-description);
+  font-size: 18px;
+  line-height: 25px;
+  width: 500px;
+  background-color: rgba(42, 69, 85, 0.95);
+  padding: 15px;
+  border-radius: 4px;
 }
 
-.title {
-  width: fit-content;
+.textDarkMode {
   transition: 0.2s;
-  margin-bottom: 1vw;
-  font-size: 30px;
-  font-family: var(--font-title);
-  font-weight: 600;
+  color: var(--text-color-darkmode);
 }
 
-.titleLightMode {
+.textLightMode {
+  transition: 0.2s;
   color: var(--text-color-lightmode);
 }
 
-.titleDarkMode {
-  color: var(--text-color-darkmode);
-}
-
 .techs {
+  width: inherit;
   display: flex;
-  color: var(--text-color-darkmode);
-  font-size: 14px;
-  letter-spacing: 1px;
-}
-
-.techsLeft {
-  align-items: flex-start;
-  justify-content: start;
-}
-
-.techsRight {
-  align-items: flex-end;
-  justify-content: end;
+  font-family: var(--font-techs);
+  font-weight: 400;
 }
 
 .techs ul {
+  gap: 10px;
   display: flex;
-  gap: 15px;
+  flex-flow: row wrap;
 }
 
-.techLightMode {
-  color: var(--color-blue-light);
-}
-
-.techDarkMode {
-  color: var(--text-color-darkmode);
+.techs li {
+  min-width: fit-content;
 }
 
 .links {
+  width: inherit;
   display: flex;
-  color: var(--color-blue-light);
-}
-
-.linksRight {
-  align-items: flex-end;
-  justify-content: end;
-}
-
-.linksLeft {
-  align-items: flex-start;
-  justify-content: start;
 }
 
 .links ul {
+  width: fit-content;
   display: flex;
-  gap: 16px;
+  gap: 10px;
 }
 
 .links li {
-  width: 32px;
-  padding-left: 10px;
+  width: 24px;
   cursor: pointer;
-}
-
-.logoLightMode {
-  transition: 0.2s;
-  stroke: black;
 }
 
 .logoHover {
@@ -151,136 +112,94 @@
   stroke: #0979b0;
 }
 
-.logoDarkMode {
+.logoLightMode {
   transition: 0.2s;
-  stroke: white;
+  stroke: var(--text-color-lightmode);
 }
 
-@media (max-width: 1200px) {
-  .cardWrapper {
-    height: 310px;
-    width: 553px;
+.logoDarkMode {
+  transition: 0.2s;
+  stroke: var(--text-color-darkmode);
+}
+
+@media (max-width: 1200px) { 
+  .card {
+    width: 83vw;
+  }
+}
+
+@media (max-width: 1150px) {
+
+  .justifyRight {
+    justify-content: flex-start;
+  }
+
+  .alignItemsRight {
+    align-items: flex-start;
+  }
+
+  .card {
+    margin: 0 auto;
+    height: 360px;
+    width: 100%;
+    max-width: 620px;
+    border-radius: 4px;
+  }
+
+  .title h2 {
+    font-size: 18px;
   }
 
   .imageWrapper {
-    height: 310px;
-    width: 553px;
+    align-items: center;
   }
 
   .image {
-    height: 310px;
-    width: 553px;
+    width: inherit;
   }
 
   .content {
-    width: 100%;
-    background-color: rgba(42, 69, 85, 0.95);
-    border-radius: 4px;
+    gap: 0;
+    justify-content: space-between;
     padding: 10px;
-    gap: 30px;
+    position: absolute;
+    height: inherit;
+    width: inherit;
+    border-radius: inherit;
+    background-color: rgba(42, 69, 85, 0.95);
   }
 
   .content p {
     padding: 0;
-    bottom: 0;
+    background-color: transparent;
+    font-size: 18px;
+    line-height: 25px;
+    width: inherit;
   }
 
-  .contentLeft {
-    left: 0;
-    text-align: start;
-    justify-content: end;
+  .textLightMode {
+    color: var(--text-color-darkmode);
   }
 
-  .contentRight {
-    left: 0;
-    text-align: start;
-    justify-content: end;
-  }
-
-  .techsLeft {
-    align-items: flex-start;
-    justify-content: start;
-  }
-
-  .techsRight {
-    align-items: flex-start;
-    justify-content: start;
-  }
-
-  .linksRight {
-    align-items: flex-start;
-    justify-content: start;
-  }
-
-  .linksLeft {
-    align-items: flex-start;
-    justify-content: start;
+  .logoLightMode {
+    transition: 0.2s;
+    stroke: var(--text-color-darkmode);
   }
 }
 
-@media (max-width: 600px) {
-  .cardWrapper {
-    height: 250px;
-    width: 445.97px;
-  }
-
-  .imageWrapper {
-    height: 250px;
-    width: 445.97px;
-  }
-
-  .image {
-    height: 250px;
-    width: 445.97px;
-  }
-
-  .content {
+@media (max-width: 400px) {
+  .card {
+    height: 400px;
     width: 100%;
-    background-color: rgba(42, 69, 85, 0.95);
     border-radius: 4px;
-    padding: 10px;
-    gap: 15px;
-  }
-}
-
-@media (max-width: 500px) {
-  .cardWrapper {
-    height: 350px;
-    width: 385.97px;
   }
 
-  .imageWrapper {
-    height: 250px;
-    width: 385.97px;
-  }
-
-  .image {
-    height: 250px;
-    width: 385.97px;
+  .title h2 {
+    font-size: 16px;
   }
 
   .content p {
-    width: 385.97px;
-  }
-}
-
-@media (max-width: 420px) {
-  .cardWrapper {
-    height: 350px;
-    width: 285.97px;
-  }
-
-  .imageWrapper {
-    height: 250px;
-    width: 285.97px;
-  }
-
-  .image {
-    height: 250px;
-    width: 285.97px;
-  }
-
-  .content p {
-    width: 285.97px;
+    font-size: 16px;
+    line-height: 20px;
   }
 }
