--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
 
 :root {
   --font-title: "Raleway", sans-serif;
+  --font-title-secondary: "Michroma", sans-serif;
+  --font-description: "Josefin Sans", sans-serif;
+  --font-techs: 'Ubuntu Mono', monospace;
 
   --background-lightmode: #f4f7fc;
   --background-darkmode:#021430;
