--- a/src/sections/About/style.module.css
+++ b/src/sections/About/style.module.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
+
 
 .about {
   min-height: 100vh;
@@ -32,7 +31,7 @@
   padding: 20px;
   line-height: 30px;
   font-weight: 300;
-  font-family: "Josefin Sans", sans-serif;
+  font-family: var(--font-description);
 }
 
 .descriptionDarkMode {
@@ -65,7 +64,7 @@
 .techBlock h2 {
   font-size: 1.5em;
   font-weight: 400;
-  font-family: 'Michroma', sans-serif;
+  font-family: var(--font-title-secondary)
 }
 
 .techTitleLightMode {
