--- a/src/sections/Projects/style.module.css
+++ b/src/sections/Projects/style.module.css
@@ -1,30 +1,20 @@
-.wrapper {
-  min-height: 100vh;
+.projects {
+  min-height: 200px;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  margin: 80px 0;
-  box-sizing: border-box;
-  overflow: hidden;
 }
 
-.projects {
+.works {
+  margin: 40px 0;
+  min-height: 200px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 80px;
-  width: 100%;
-  overflow: hidden;
-}
-
-.showMoreBtn {
-  font-size: 16px;
-  padding: 15px;
+  gap: 60px;
 }
 
 .showMoreBtnDarkMode {
-  margin: 20px auto;
+  margin: 0 auto;
 
   transition: 0.2s;
   font-size: 14px;
@@ -78,7 +68,7 @@
 }
 
 .showMoreBtnLightMode {
-  margin: 20px auto;
+  margin: 0 auto;
 
   transition: 0.2s;
   font-size: 14px;
@@ -131,18 +121,7 @@
   transform: skewY(-10deg) scale(1, 1);
 }
 
-@media (max-width: 500px) {
-
-
-  .projectsPage {
-    width: 100%;
-    padding: 0;
+@media (max-width: 400px) {
+  .works {
   }
-
-  .wrapper {
-    display: flex;
-    width: 100%;
-    padding: 0;
-  }
-  
 }
